Fix responsive layout issues in todo-list and todo-dialog UI

--- a/src/app/pages/todo-list/todo-item/todo-item.scss
+++ b/src/app/pages/todo-list/todo-item/todo-item.scss
@@ -13,3 +13,17 @@
 button.mat-mdc-menu-item {
 	min-width: 180px;
 }
+
+@media (max-width: 599px) {
+	.todo-item-title {
+		margin-bottom: 15px;
+	}
+
+	.todo-item-menu {
+		position: absolute;
+		right: 20px;
+		top: 50%;
+		transform: translateY(-50%);
+		max-height: 10%;
+	}
+}
